--- a/index.html
+++ b/index.html
@@ -8,30 +8,13 @@
 </head>
 <body>
     <h1 id="title">Who Will Win the War?</h1>
+    <input type="text" id="country1" placeholder="Enter first country">
+    <input type="text" id="country2" placeholder="Enter second country">
+    <button id="compareButton">Compare</button>
 
-    <div id="form-container">
-        <input type="text" id="country1" placeholder="Enter first country" class="input-field">
-        <input type="text" id="country2" placeholder="Enter second country" class="input-field">
-        <button id="compareButton">Compare</button>
-    </div>
-
-    <div id="container">
-        <div id="left-side">
-            <h2 id="country1-name"></h2>
-            <p id="country1-chance"></p>
-        </div>
-
-        <div id="middle-section">
-            <p id="winner-text"></p>
-        </div>
-
-        <div id="right-side">
-            <h2 id="country2-name"></h2>
-            <p id="country2-chance"></p>
-        </div>
-    </div>
+    <!-- Resultat-diven -->
+    <div id="result"></div>
 
     <script src="app.js"></script>
 </body>
 </html>
-
