--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <!-- Vinnare i mitten -->
-    <div id="winner"></div>
+    <div id="winner" style="margin-top: 20px;"></div>
 
     <button id="compareButton">Compare</button>
 
