--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <!-- Vinnare i mitten -->
     <div id="winner" style="margin-top: 20px;"></div>
+    
+    <div id="explanation"></div>
 
     <button id="compareButton">Compare</button>
 
