--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 <body>
     <h1 id="title">Who Will Win the War?</h1>
 
-    <!-- Layout för vänster och höger sida -->
+    <!-- Layout for left and right columns -->
     <div class="container">
         <div class="left">
             <input type="text" id="country1" placeholder="Enter first country">
-            <div id="result-left"></div> <!-- Här visas resultatet för vänster sida -->
+            <div id="result-left"></div> <!-- Left side result -->
         </div>
         <div class="right">
             <input type="text" id="country2" placeholder="Enter second country">
-            <div id="result-right"></div> <!-- Här visas resultatet för höger sida -->
+            <div id="result-right"></div> <!-- Right side result -->
         </div>
     </div>
 
-    <!-- Vinnare i mitten -->
+    <!-- Winner in the center -->
     <div id="winner" style="margin-top: 20px;"></div>
     
+    <!-- Explanation for the result -->
     <div id="explanation"></div>
 
     <button id="compareButton">Compare</button>
