--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <!-- Vinnare i mitten -->
     <div id="winner" style="margin-top: 20px;"></div>
+
+    <!-- Chans att vinna centralt i mitten -->
+    <div id="win-chances" style="text-align: center; margin-top: 10px;"></div>
     
     <div id="explanation"></div>
 
