--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
     <div id="explanation"></div>
 
     <!-- Div för kartan -->
-    <div id="map"></div>
+    <div id="world-map-container">
+    <img id="world-map" src="world-map.svg" alt="World Map" />
+</div>
+
 
     <button id="compareButton">Compare</button>
 
