--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="version" style="position: absolute; top: 10px; left: 10px;"></div>
-    <h1 id="title">Who Will Win the War?</h1>
+    <h1 id="title" class="animated-text">Who Will Win the War?</h1>
 
     <!-- Layout för vänster och höger sida -->
     <div class="container">
@@ -27,13 +27,12 @@
     <div id="win-chances"></div>
     <div id="explanation"></div>
 
-    <!-- Knappen över kartan -->
     <button id="compareButton">Compare</button>
 
-    <!-- Div för kartan -->
-    <div id="world-map-container">
-        <img id="world-map" src="world-map.svg" alt="World Map" />
-    </div>
+    <!-- Om oss sektion som alltid syns längst ner -->
+    <footer id="about-us">
+        <p>WarAway - Inget av detta är verkligt, men all information är fakta och äkta.</p>
+    </footer>
 
     <script src="app.js"></script>
 </body>
