--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="version" style="position: absolute; top: 10px; left: 10px;"></div>
-    <h1 id="title" class="animated-text">Who Will Win the War?</h1>
+    <h1 id="title">Who Will Win the War?</h1>
 
     <!-- Layout för vänster och höger sida -->
     <div class="container">
