--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
 
     <button id="compareButton">Compare</button>
 
+    <!-- Kategori-sektion -->
+    <div class="categories">
+        <h2>Categories</h2>
+        <ul>
+            <li>1. Population</li>
+            <li>2. Economy</li>
+            <li>3. Available for War</li>
+            <li>4. Warplanes</li>
+            <li>5. Tanks</li>
+            <li>6. Naval Strength</li>
+            <li>7. Missile Defense Systems</li>
+            <li>8. Safety Level (1-5)</li>
+        </ul>
+    </div>
+
     <!-- Om oss sektion som alltid syns längst ner -->
     <footer id="about-us">
         <p>WarAway - Inget av detta är verkligt, men all information är fakta och äkta.</p>
