--- a/index.html
+++ b/index.html
@@ -14,11 +14,29 @@
     <div class="container">
         <div class="left">
             <input type="text" id="country1" placeholder="Enter first country">
-            <div id="result-left"></div>
+            <div id="result-left">
+                <p>Population: <span id="population1"></span></p>
+                <p>Economy: <span id="economy1"></span></p>
+                <p>Available for War: <span id="available1"></span></p>
+                <p>Warplanes: <span id="warplanes1"></span></p>
+                <p>Tanks: <span id="tanks1"></span></p>
+                <p>Naval Strength: <span id="naval1"></span></p>
+                <p>Missile Defense Systems: <span id="missile1"></span></p>
+                <p>Safety Level: <span id="safety1"></span></p>
+            </div>
         </div>
         <div class="right">
             <input type="text" id="country2" placeholder="Enter second country">
-            <div id="result-right"></div>
+            <div id="result-right">
+                <p>Population: <span id="population2"></span></p>
+                <p>Economy: <span id="economy2"></span></p>
+                <p>Available for War: <span id="available2"></span></p>
+                <p>Warplanes: <span id="warplanes2"></span></p>
+                <p>Tanks: <span id="tanks2"></span></p>
+                <p>Naval Strength: <span id="naval2"></span></p>
+                <p>Missile Defense Systems: <span id="missile2"></span></p>
+                <p>Safety Level: <span id="safety2"></span></p>
+            </div>
         </div>
     </div>
 
@@ -28,21 +46,6 @@
     <div id="explanation"></div>
 
     <button id="compareButton">Compare</button>
-
-    <!-- Kategori-sektion -->
-    <div class="categories">
-        <h2>Categories</h2>
-        <ul>
-            <li>1. Population</li>
-            <li>2. Economy</li>
-            <li>3. Available for War</li>
-            <li>4. Warplanes</li>
-            <li>5. Tanks</li>
-            <li>6. Naval Strength</li>
-            <li>7. Missile Defense Systems</li>
-            <li>8. Safety Level (1-5)</li>
-        </ul>
-    </div>
 
     <!-- Om oss sektion som alltid syns längst ner -->
     <footer id="about-us">
