--- a/index.html
+++ b/index.html
@@ -14,29 +14,11 @@
     <div class="container">
         <div class="left">
             <input type="text" id="country1" placeholder="Enter first country">
-            <div id="result-left">
-                <p>Population: <span id="population1"></span></p>
-                <p>Economy: <span id="economy1"></span></p>
-                <p>Available for War: <span id="available1"></span></p>
-                <p>Warplanes: <span id="warplanes1"></span></p>
-                <p>Tanks: <span id="tanks1"></span></p>
-                <p>Naval Strength: <span id="naval1"></span></p>
-                <p>Missile Defense Systems: <span id="missile1"></span></p>
-                <p>Safety Level: <span id="safety1"></span></p>
-            </div>
+            <div id="result-left"></div>
         </div>
         <div class="right">
             <input type="text" id="country2" placeholder="Enter second country">
-            <div id="result-right">
-                <p>Population: <span id="population2"></span></p>
-                <p>Economy: <span id="economy2"></span></p>
-                <p>Available for War: <span id="available2"></span></p>
-                <p>Warplanes: <span id="warplanes2"></span></p>
-                <p>Tanks: <span id="tanks2"></span></p>
-                <p>Naval Strength: <span id="naval2"></span></p>
-                <p>Missile Defense Systems: <span id="missile2"></span></p>
-                <p>Safety Level: <span id="safety2"></span></p>
-            </div>
+            <div id="result-right"></div>
         </div>
     </div>
 
@@ -47,9 +29,8 @@
 
     <button id="compareButton">Compare</button>
 
-    <!-- Om oss sektion som alltid syns längst ner -->
-    <footer id="about-us">
-        <p>WarAway - Inget av detta är verkligt, men all information är fakta och äkta.</p>
+    <footer>
+        <p>WarAway - All information here is factual and accurate, but nothing is real.</p>
     </footer>
 
     <script src="app.js"></script>
