--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
 
     <button id="compareButton">Compare</button>
 
-    <footer>
-        <p>WarAway - All information here is factual and accurate, but nothing is real.</p>
-    </footer>
+  <section id="about-us">
+    <p>
+        <span class="blue-text">Vi på WarAway</span> erbjuder en plattform för att jämföra länders militärstyrka och kapacitet. Även om våra simuleringar inte är verkliga, är all information och data vi presenterar baserad på riktiga och verifierbara fakta. 
+        <span class="green-text">Vårt mål</span> är att ge användarna en informativ och underhållande upplevelse när de jämför olika nationers styrkor.
+    </p>
+</section>
 
     <script src="app.js"></script>
 </body>
