--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <!-- Layout för vänster och höger sida -->
     <div class="container">
         <div class="left">
-            <input type="text" id="country1" placeholder="Enter first country">
+            <input type="text" id="country1-1" placeholder="Enter first country for Team 1">
+            <input type="text" id="country1-2" placeholder="Enter second country for Team 1">
+            <input type="text" id="country1-3" placeholder="Enter third country for Team 1">
             <div id="result-left"></div>
         </div>
         <div class="right">
-            <input type="text" id="country2" placeholder="Enter second country">
+            <input type="text" id="country2-1" placeholder="Enter first country for Team 2">
+            <input type="text" id="country2-2" placeholder="Enter second country for Team 2">
+            <input type="text" id="country2-3" placeholder="Enter third country for Team 2">
             <div id="result-right"></div>
         </div>
     </div>
@@ -29,12 +33,12 @@
 
     <button id="compareButton">Compare</button>
 
-  <section id="about-us">
-    <p>
-        <span class="blue-text">Vi på WarAway</span> erbjuder en plattform för att jämföra länders militärstyrka och kapacitet. Även om våra simuleringar inte är verkliga, är all information och data vi presenterar baserad på riktiga och verifierbara fakta. 
-        <span class="green-text">Vårt mål</span> är att ge användarna en informativ och underhållande upplevelse när de jämför olika nationers styrkor.
-    </p>
-</section>
+    <section id="about-us">
+        <p>
+            <span class="blue-text">Vi på WarAway</span> erbjuder en plattform för att jämföra länders militärstyrka och kapacitet. Även om våra simuleringar inte är verkliga, är all information och data vi presenterar baserad på riktiga och verifierbara fakta. 
+            <span class="green-text">Vårt mål</span> är att ge användarna en informativ och underhållande upplevelse när de jämför olika nationers styrkor.
+        </p>
+    </section>
 
     <script src="app.js"></script>
 </body>
