--- a/index.html
+++ b/index.html
@@ -11,27 +11,21 @@
     <h1 id="title">Who Will Win the War?</h1>
 
     <!-- Layout för vänster och höger sida -->
-    <div class="container">
-        <div class="left">
-            <input type="text" id="country1-1" placeholder="Enter first country for Team 1">
-            <input type="text" id="country1-2" placeholder="Enter second country for Team 1">
-            <input type="text" id="country1-3" placeholder="Enter third country for Team 1">
-            <div id="result-left"></div>
-        </div>
-        <div class="right">
-            <input type="text" id="country2-1" placeholder="Enter first country for Team 2">
-            <input type="text" id="country2-2" placeholder="Enter second country for Team 2">
-            <input type="text" id="country2-3" placeholder="Enter third country for Team 2">
-            <div id="result-right"></div>
-        </div>
+  <div class="container">
+    <div class="left">
+        <input type="text" id="country1" placeholder="Enter first country">
+        <div id="result-left"></div>
     </div>
+    <div class="right">
+        <input type="text" id="country2" placeholder="Enter second country">
+        <div id="result-right"></div>
+    </div>
+</div>
 
-    <!-- Vinnare och förklaringar -->
-    <div id="winner" style="margin-top: 20px;"></div>
-    <div id="win-chances"></div>
-    <div id="explanation"></div>
-
-    <button id="compareButton">Compare</button>
+<!-- Vinnare och förklaringar -->
+<div id="winner" style="margin-top: 20px;"></div>
+<div id="win-chances"></div>
+<button id="compareButton">Compare</button>
 
     <section id="about-us">
         <p>
