--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div id="version" style="position: absolute; top: 10px; left: 10px;"></div>
-    <h1 id="title">Who Will Win the War?</h1>
+    <h1 id="title">Vem vinner kriget?</h1>
 
     <!-- Layout för vänster och höger sida -->
   <div class="container">
     <div class="left">
-        <input type="text" id="country1" placeholder="Enter first country">
+        <input type="text" id="country1" placeholder="Ange första landet">
         <div id="result-left"></div>
     </div>
     <div class="right">
-        <input type="text" id="country2" placeholder="Enter second country">
+        <input type="text" id="country2" placeholder="Ange andra landet">
         <div id="result-right"></div>
     </div>
 </div>
