--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Skrollbara val för olika spel -->
     <div class="spel-meny">
         <div class="spel-val">
-            <a href="index.html">1v1 Krig</a>
+            <a href="1v1krig.html">1v1 Krig</a>
             <p>Välj två länder och se vilket som vinner!</p>
         </div>
 
