--- a/index.html
+++ b/index.html
@@ -5,18 +5,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huvudmeny - Krigsspel</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Styling for the page */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+
+        #title {
+            margin: 20px 0;
+            color: #333;
+        }
+
+        /* Button styling */
+        .top-button {
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .top-button:hover {
+            background-color: #0056b3;
+        }
+
+        /* Game card styling */
+        .spel-meny {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 40px;
+        }
+
+        .spel-val {
+            width: 200px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .spel-val:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        .spel-val a {
+            display: block;
+            font-size: 18px;
+            font-weight: bold;
+            color: #007BFF;
+            margin-bottom: 10px;
+            text-decoration: none;
+        }
+
+        .spel-val a:hover {
+            color: #0056b3;
+        }
+
+        .spel-val p {
+            font-size: 14px;
+            color: #666;
+        }
+
+    </style>
 </head>
 <body>
     <h1 id="title">Välj ditt Krigsspel</h1>
-    
-    <!-- Skrollbara val för olika spel -->
+
+    <!-- Button to go to 1v1 Krig page -->
+    <button class="top-button" onclick="window.location.href='https://thecoolpal.com/1v1krig.html';">Gå till 1v1 Krig</button>
+
+    <!-- Scrollable options for different games -->
     <div class="spel-meny">
+        <!-- First Game Option -->
         <div class="spel-val">
             <a href="1v1krig.html">1v1 Krig</a>
             <p>Välj två länder och se vilket som vinner!</p>
         </div>
 
-        <!-- Du kan lägga till fler spelval här -->
+        <!-- Second Game Option (More games can be added here) -->
         <div class="spel-val">
             <a href="#">Kommande Spel</a>
             <p>Fler spännande spel på väg!</p>
