--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         /* Styling for the page */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background: linear-gradient(135deg, #1E90FF, #D3D3D3); /* Blue to grey gradient */
             text-align: center;
             margin: 0;
             padding-bottom: 100px; /* Padding for footer */
@@ -17,7 +17,7 @@
 
         #title {
             margin: 20px 0;
-            color: #333;
+            color: #fff; /* White text for better contrast on gradient */
         }
 
         /* Button styling */
@@ -151,7 +151,7 @@
 
     <!-- Footer section -->
     <footer>
-        <p>&copy; 2024 <span>WarAway</span>. Framtidens företag. All information är noggrant verifierad för att ge dig en underhållande och informativ upplevelse.</p>
+        <p>&copy; 2024 <span>WarAway</span>. Ett framtidens företag. All information är noggrant verifierad för att ge dig en underhållande och informativ upplevelse.</p>
     </footer>
 
     <script src="main.js"></script>
