--- a/1v1krig.html
+++ b/1v1krig.html
@@ -59,6 +59,11 @@
         </p>
     </section>
 
+    <!-- Footer section -->
+    <footer>
+        <p>&copy; 2024 <span>WarAway</span>. Ett framtidens företag. All information är noggrant verifierad för att ge dig en underhållande och informativ upplevelse.</p>
+    </footer>
+
     <script src="app.js"></script>
 </body>
 </html>
