--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     
     <!-- Footer section -->
     <footer>
-        <p>&copy; 2024 <span>WarAway</span>. Ett framtidens företag. All information är noggrant verifierad för att ge dig en underhållande och informativ upplevelse.</p>
+        <p>&copy; 2024 <span>WarAway</span>. Framtidens företag. All information är noggrant verifierad för att ge dig en underhållande och informativ upplevelse.</p>
     </footer>
 
     <script src="main.js"></script>
