--- a/1v1krig.html
+++ b/1v1krig.html
@@ -21,6 +21,20 @@
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
+         /* Styling for the footer */
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 12px;
+            letter-spacing: 1px;
+        }
+
         .back-button:hover {
             background-color: #0056b3;
             transform: translateY(-2px); /* Slight movement on hover */
