--- a/1v1krig.html
+++ b/1v1krig.html
@@ -33,7 +33,8 @@
             color: white;
             padding: 20px;
             font-size: 14px;
-            margin-top: 40px; /* Ensures spacing above footer */
+            margin: 0; /* Removes extra space between Om oss and footer */
+            text-align: center;
         }
 
         #about-us .blue-text {
@@ -46,14 +47,12 @@
 
         /* Styling for the footer */
         footer {
-            position: relative;
             background-color: #333;
             color: white;
             text-align: center;
             padding: 10px 0;
             font-size: 12px;
             letter-spacing: 1px;
-            margin-top: 20px; /* Spacing between footer and Om oss */
         }
 
         footer span {
@@ -90,7 +89,7 @@
     <div id="win-chances"></div>
     <button id="compareButton">Compare</button>
 
-    <!-- Om oss section -->
+    <!-- Om oss section precis ovanför footern -->
     <section id="about-us">
         <p>
             <span class="blue-text">Vi på WarAway</span> erbjuder en plattform för att jämföra länders militärstyrka och kapacitet. Även om våra simuleringar inte är verkliga, är all information och data vi presenterar baserad på riktiga och verifierbara fakta. 
