--- a/1v1krig.html
+++ b/1v1krig.html
@@ -54,7 +54,7 @@
 
         /* Styling for the "Om oss" section */
         #about-us {
-            background-color: #007BFF;
+            background-color: #d3d3d3;
             color: white;
             padding: 20px;
             font-size: 14px;
