--- a/1v1krig.html
+++ b/1v1krig.html
@@ -45,6 +45,7 @@
             border-radius: 8px;
             cursor: pointer;
             margin-top: 20px;
+            display: inline-block; /* Makes the button adapt to the width of the text */
             transition: background-color 0.3s ease;
         }
 
