--- a/1v1krig.html
+++ b/1v1krig.html
@@ -8,9 +8,9 @@
     <style>
         /* Smooth back button styling */
         .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
+            position: fixed; /* Fixed to stay in place at the top */
+            top: 10px;
+            right: 10px; /* Place in the top-right corner */
             padding: 10px 20px;
             font-size: 16px;
             background-color: #007BFF;
@@ -36,6 +36,7 @@
             min-height: 100vh; /* Ensure the page takes full viewport height */
             display: flex;
             flex-direction: column;
+            padding-top: 60px; /* Space for the back button */
         }
 
         /* Main content */
@@ -90,11 +91,10 @@
     </style>
 </head>
 <body>
-    <!-- Main content area -->
-    <div class="content">
-        <!-- Back button to return to https://thecoolpal.com -->
-        <button class="back-button" onclick="window.location.href='https://thecoolpal.com'">Tillbaka</button>
+    <!-- Back button to return to https://thecoolpal.com -->
+    <button class="back-button" onclick="window.location.href='https://thecoolpal.com'">Tillbaka</button>
 
+    <div class="content">
         <div id="version" style="position: absolute; top: 10px; left: 10px;"></div>
         <h1 id="title">Vem vinner kriget?</h1>
 
