--- a/1v1krig.html
+++ b/1v1krig.html
@@ -8,9 +8,9 @@
     <style>
         /* Smooth back button styling */
         .back-button {
-            position: fixed; /* Fixed to stay in place at the top */
+            position: fixed;
             top: 10px;
-            right: 10px; /* Place in the top-right corner */
+            left: 10px; /* Flyttar knappen till vänster */
             padding: 10px 20px;
             font-size: 16px;
             background-color: #007BFF;
