--- a/2v2krig.html
+++ b/2v2krig.html
@@ -1,1 +1,151 @@
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vem vinner 2v2 kriget?</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Smooth back button styling */
+        .back-button {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
 
+        /* Back button hover effect */
+        .back-button:hover {
+            background-color: #0056b3;
+            transform: translateY(-2px);
+        }
+
+        /* Gradient background styling */
+        body {
+            background: linear-gradient(135deg, #1E90FF, #D3D3D3);
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            padding-top: 60px;
+        }
+
+        /* Main content */
+        .content {
+            flex: 1;
+        }
+
+        /* Layout för inmatningsfälten */
+        .container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .left, .right {
+            display: inline-block;
+        }
+
+        /* Styling for the compare button */
+        #compareButton {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            margin-top: 20px;
+            display: inline-block;
+            width: auto;
+            transition: background-color 0.3s ease;
+        }
+
+        #compareButton:hover {
+            background-color: #0056b3;
+        }
+
+        /* Styling for the footer */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 12px;
+            letter-spacing: 1px;
+            position: relative;
+        }
+
+        footer span {
+            font-weight: bold;
+            color: #FFD700;
+        }
+
+        footer span:hover {
+            color: #FFF;
+        }
+
+        /* Ensures footer sticks to the bottom */
+        .footer-container {
+            flex-shrink: 0;
+        }
+
+    </style>
+</head>
+<body>
+    <!-- Back button to return to https://thecoolpal.com -->
+    <button class="back-button" onclick="window.location.href='https://thecoolpal.com'">Tillbaka</button>
+
+    <div class="content">
+        <div id="version" style="position: absolute; top: 10px; left: 10px;"></div>
+        <h1 id="title">Vem vinner 2v2 kriget?</h1>
+
+        <!-- Layout för vänster och höger sida -->
+        <div class="container">
+            <div class="left">
+                <input type="text" id="country1" placeholder="Ange första landet (Lag 1)">
+                <input type="text" id="country2" placeholder="Ange andra landet (Lag 1)">
+                <div id="result-left"></div>
+            </div>
+            <div class="right">
+                <input type="text" id="country3" placeholder="Ange första landet (Lag 2)">
+                <input type="text" id="country4" placeholder="Ange andra landet (Lag 2)">
+                <div id="result-right"></div>
+            </div>
+        </div>
+
+        <!-- Vinnare och förklaringar -->
+        <div id="winner" style="margin-top: 20px;"></div>
+        <div id="win-chances"></div>
+
+        <!-- Updated button text to Swedish "Jämför" -->
+        <button id="compareButton">Jämför</button>
+    </div>
+
+    <!-- Footer section -->
+    <footer class="footer-container">
+        <p>&copy; 2024 <span>WarAway</span>. Framtidens företag. All information är noggrant verifierad för att ge dig en underhållande och informativ upplevelse.</p>
+    </footer>
+
+    <script src="app.js"></script>
+
+    <script>
+        // Trigger compare on Enter key press
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                document.getElementById('compareButton').click();
+            }
+        });
+    </script>
+</body>
+</html>
