--- a/index.html
+++ b/index.html
@@ -124,6 +124,13 @@
             </div>
         </a>
 
+         <a href="2v2krig.html" class="spel-val">
+            <div>
+                <h3>2v2 Krig</h3>
+                <p>Välj 4 länder och se vilket som vinner!</p>
+            </div>
+        </a>
+
         <!-- Second Game Option (More games can be added here) -->
         <a href="#" class="spel-val">
             <div>
