--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huvudmeny - Krigsspel</title>
+    
+    <!-- Lägga till favicon -->
+    <link rel="icon" href="favicon.png" type="image/png">
+
     <link rel="stylesheet" href="style.css">
     <style>
         /* Styling for the page */
