--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Huvudmeny - Krigsspel</title>
     
     <!-- Lägga till favicon -->
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="faviconm.png" type="image/png">
 
     <link rel="stylesheet" href="style.css">
     <style>
