--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </style>
 </head>
 <body>
-    <h1 id="title">Välj ditt Krigsspel</h1>
+    <h1 id="title">Välj spel och andra verktyg!</h1>
 
     <!-- Scrollable options for different games -->
     <div class="spel-meny">
