--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
 
     <!-- Scrollable options for different games -->
     <div class="spel-meny">
+         <!-- First Game Option -->
+        <a href="1v1krig.html" class="spel-val">
+            <div>
+                <h3>TextGen AI</h3>
+                <p>Generera unika texter med vår AI!</p>
+            </div>
+        </a>
+        
         <!-- First Game Option -->
         <a href="1v1krig.html" class="spel-val">
             <div>
