--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- Scrollable options for different games -->
     <div class="spel-meny">
          <!-- First Game Option -->
-        <a href="1v1krig.html" class="spel-val">
+        <a href="ai_skrivmaskin.html" class="spel-val">
             <div>
                 <h3>TextGen AI</h3>
                 <p>Generera unika texter med vår AI!</p>
