--- a/ai_skrivmaskin.html
+++ b/ai_skrivmaskin.html
@@ -5,48 +5,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Skrivmaskin</title>
     <style>
+        /* Gradient background styling */
         body {
+            background: linear-gradient(135deg, #1E90FF, #D3D3D3); /* Blue to grey gradient */
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            text-align: center;
             margin: 0;
-            padding: 20px;
+            min-height: 100vh; /* Ensure the page takes full viewport height */
+            display: flex;
+            flex-direction: column;
+            padding-top: 20px; /* Space at the top */
         }
-        h1 {
-            text-align: center;
-        }
-        #output {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-top: 20px;
-            background: #fff;
-            min-height: 100px;
-        }
-        #input {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-        }
-        button {
+
+        /* Back button styling */
+        .back-button {
+            position: fixed;
+            top: 10px;
+            left: 10px;
             padding: 10px 20px;
-            margin-top: 10px;
+            font-size: 16px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
-        /* Stil för footer */
-        .footer-container {
-            text-align: center;
+
+        /* Back button hover effect */
+        .back-button:hover {
+            background-color: #0056b3;
+            transform: translateY(-2px); /* Slight movement on hover */
+        }
+
+        /* Main content */
+        .content {
+            flex: 1;
+            margin-top: 60px; /* Space for back button */
+        }
+
+        /* Styling for the compare button */
+        #compareButton {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
             margin-top: 20px;
-            padding: 10px;
-            background-color: #eaeaea;
-            border-top: 1px solid #ccc;
+            display: inline-block; /* Keeps the button size compact */
+            width: auto; /* Adjust to content */
+            transition: background-color 0.3s ease;
+        }
+
+        #compareButton:hover {
+            background-color: #0056b3;
+        }
+
+        /* Styling for the footer */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 12px;
+            letter-spacing: 1px;
+            position: relative;
+        }
+
+        footer span {
+            font-weight: bold;
+            color: #FFD700; /* Cool gold color for company name */
+        }
+
+        footer span:hover {
+            color: #FFF;
+        }
+
+        /* Ensures footer sticks to the bottom */
+        .footer-container {
+            flex-shrink: 0;
         }
     </style>
 </head>
 <body>
-    <h1>AI Skrivmaskin</h1>
-    <input type="text" id="input" placeholder="Skriv din text här...">
-    <button id="compareButton" onclick="generateText()">Skriv!</button>
-    <div id="output"></div>
+    <!-- Back button to return to the previous page -->
+    <button class="back-button" onclick="window.location.href='https://thecoolpal.com'">Tillbaka</button>
 
-    <!-- Footer-sektion -->
+    <div class="content">
+        <h1>AI Skrivmaskin</h1>
+
+        <!-- Input area for user to enter text -->
+        <input type="text" id="input" placeholder="Skriv din text här..." />
+        
+        <!-- Button to trigger text generation -->
+        <button id="compareButton" onclick="generateText()">Skriv!</button>
+
+        <!-- Output area for generated text -->
+        <div id="output" style="margin-top: 20px;"></div>
+    </div>
+
+    <!-- Footer section -->
     <footer class="footer-container">
         <p>&copy; 2024 <span>WarAway</span>. Framtidens företag. All information är noggrant verifierad för att ge dig en underhållande och informativ upplevelse.</p>
     </footer>
@@ -55,30 +115,29 @@
         async function generateText() {
             const input = document.getElementById("input").value;
             const output = document.getElementById("output");
-            output.innerHTML = ""; // Rensa tidigare text
+            output.innerHTML = ""; // Clear previous output
 
-            // Anropa Hugging Face API
+            // Call Hugging Face API
             const response = await fetch('https://api-inference.huggingface.co/models/gpt2', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer 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', // Din API-nyckel
+                    'Authorization': 'Bearer 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', // Your API key
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({ inputs: input })
             });
-
             const data = await response.json();
 
-            const textToType = data[0]?.generated_text || "Ingen text genererades."; // Hantera svar från API
+            const textToType = data[0]?.generated_text || "Ingen text genererades."; // Handle API response
 
-            // Animerad textutmatning
+            // Animated output display
             for (const char of textToType) {
                 output.innerHTML += char;
-                await new Promise(resolve => setTimeout(resolve, 50)); // Vänta 50 ms innan nästa tecken
+                await new Promise(resolve => setTimeout(resolve, 50)); // Wait 50 ms before next character
             }
         }
 
-        // Utlös jämförelse vid tryck på Enter-tangenten
+        // Trigger generation on Enter key press
         document.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
                 event.preventDefault();
