--- a/ai_skrivmaskin.html
+++ b/ai_skrivmaskin.html
@@ -118,7 +118,7 @@
             output.innerHTML = ""; // Clear previous output
 
             // Call Hugging Face API
-            const response = await fetch('https://api-inference.huggingface.co/models/distilgpt2', {
+            const response = await fetch('https://api-inference.huggingface.co/models/EleutherAI/gpt-neo-2.7B', {
                 method: 'POST',
                 headers: {
                     'Authorization': 'Bearer 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', // Your API key
