--- a/ai_skrivmaskin.html
+++ b/ai_skrivmaskin.html
@@ -118,7 +118,7 @@
             output.innerHTML = ""; // Rensa tidigare text
 
             // Anropa Hugging Face API
-            const response = await fetch('https://api-inference.huggingface.co/models/EleutherAI/gpt-neo-2.7B', {
+            const response = await fetch('https://api-inference.huggingface.co/models/gpt2-large', {
                 method: 'POST',
                 headers: {
                     'Authorization': 'Bearer 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', // Din API-nyckel
