--- a/ai_skrivmaskin.html
+++ b/ai_skrivmaskin.html
@@ -9,12 +9,12 @@
         body {
             background: linear-gradient(135deg, #1E90FF, #D3D3D3); /* Blue to grey gradient */
             font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
             min-height: 100vh; /* Ensure the page takes full viewport height */
             display: flex;
             flex-direction: column;
             padding-top: 20px; /* Space at the top */
+            text-align: center;
         }
 
         /* Back button styling */
@@ -38,32 +38,76 @@
             transform: translateY(-2px); /* Slight movement on hover */
         }
 
-        /* Main content */
+        /* Main content layout */
         .content {
+            display: flex;
+            justify-content: space-between;
+            width: 80%;
+            margin: 20px auto; /* Center the content */
             flex: 1;
-            margin-top: 60px; /* Space for back button */
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            overflow: hidden; /* Prevent content overflow */
         }
 
-        /* Styling for the generate button */
-        #compareButton {
+        /* Input area styling */
+        .left {
+            width: 50%;
+            padding: 20px;
+            background-color: #ffffff; /* White background */
+            border-right: 2px solid #007BFF; /* Divider color */
+        }
+
+        /* Output area styling */
+        .right {
+            width: 50%;
+            padding: 20px;
+            background-color: #ffffff; /* White background */
+            overflow-y: auto; /* Enable scrolling if content is too long */
+        }
+
+        /* Styling for input field */
+        input {
+            padding: 10px;
+            margin-top: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            width: 90%;
+            color: #000000; /* Black text */
+            background-color: #ffffff; /* White background for input */
+        }
+
+        /* Styling for buttons */
+        button {
             padding: 10px 20px;
             font-size: 16px;
             background-color: #007BFF;
             color: white;
             border: none;
-            border-radius: 8px;
             cursor: pointer;
+            border-radius: 4px;
             margin-top: 20px;
-            display: inline-block; /* Keeps the button size compact */
-            width: auto; /* Adjust to content */
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
-        #compareButton:hover {
+        button:hover {
             background-color: #0056b3;
+            transform: translateY(-2px); /* Slight movement on hover */
         }
 
-        /* Styling for the footer */
+        /* Styling for output text area */
+        #output {
+            font-size: 18px;
+            margin-top: 10px;
+            color: #000000; /* Black text */
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1); /* Light shadow for visibility */
+            min-height: 100px; /* Ensure a minimum height */
+        }
+
+        /* Styling for footer */
         footer {
             background-color: #333;
             color: white;
@@ -94,16 +138,15 @@
     <button class="back-button" onclick="window.location.href='https://thecoolpal.com'">Tillbaka</button>
 
     <div class="content">
-        <h1>AI Skrivmaskin</h1>
-
-        <!-- Input area for user to enter text -->
-        <input type="text" id="input" placeholder="Skriv din text här..." />
-        
-        <!-- Button to trigger text generation -->
-        <button id="compareButton" onclick="generateText()">Skriv!</button>
-
-        <!-- Output area for generated text -->
-        <div id="output" style="margin-top: 20px;"></div>
+        <div class="left">
+            <h1>AI Skrivmaskin</h1>
+            <input type="text" id="input" placeholder="Skriv din text här..." />
+            <button id="compareButton" onclick="generateText()">Skriv!</button>
+        </div>
+        <div class="right">
+            <h2>Genererat Text:</h2>
+            <div id="output"></div>
+        </div>
     </div>
 
     <!-- Footer section -->
@@ -118,13 +161,13 @@
             output.innerHTML = ""; // Rensa tidigare text
 
             // Anropa Hugging Face API
-            const response = await fetch('https://api-inference.huggingface.co/models/gpt2-large', {
+            const response = await fetch('https://api-inference.huggingface.co/models/EleutherAI/gpt-neo-2.7B', {
                 method: 'POST',
                 headers: {
                     'Authorization': 'Bearer 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', // Din API-nyckel
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ inputs: input })
+            body: JSON.stringify({ inputs: input })
             });
 
             // Logga hela svaret för felsökning
@@ -136,7 +179,7 @@
             // Animerad textutmatning
             for (const char of textToType) {
                 output.innerHTML += char;
-                await new Promise(resolve => setTimeout(resolve, 10)); // Vänta 50 ms innan nästa tecken
+                await new Promise(resolve => setTimeout(resolve, 50)); // Vänta 50 ms innan nästa tecken
             }
         }
 
