--- a/ai_skrivmaskin.html
+++ b/ai_skrivmaskin.html
@@ -160,26 +160,24 @@
             const output = document.getElementById("output");
             output.innerHTML = ""; // Rensa tidigare text
 
-            // Anropa Hugging Face API
-            const response = await fetch('https://api-inference.huggingface.co/models/EleutherAI/gpt-neo-2.7B', {
+            // Anropa den lokala Flask-servern
+            const response = await fetch('http://127.0.0.1:5000/generate', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer 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', // Din API-nyckel
                     'Content-Type': 'application/json'
                 },
-            body: JSON.stringify({ inputs: input })
+                body: JSON.stringify({ input: input })
             });
 
-            // Logga hela svaret för felsökning
             const data = await response.json();
-            console.log(data); // Loggar svaret från API:et till konsolen
+            console.log(data); // Logga svaret från servern
 
-            const textToType = data[0]?.generated_text || "Ingen text genererades."; // Hantera API-svaret
+            const textToType = data.output || "Ingen text genererades."; // Hantera API-svaret
 
             // Animerad textutmatning
             for (const char of textToType) {
                 output.innerHTML += char;
-                await new Promise(resolve => setTimeout(resolve, 50)); // Vänta 50 ms innan nästa tecken
+                await new Promise(resolve => setTimeout(resolve, 10)); // Vänta 10 ms innan nästa tecken
             }
         }
 
