--- a/iq_quiz.html
+++ b/iq_quiz.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IQ Quiz</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <h1>IQ Quiz</h1>
-    <div id="quiz-container"></div>
+    <div id="quiz-container" class="container"></div>
     <button id="submit-btn">Skicka in</button>
     <div id="result"></div>
     <canvas id="resultChart" width="400" height="200"></canvas>
+    
+    <div id="about-us">
+        <p>Denna quiz är skapad för att testa din IQ!</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
