--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
     <!-- Scrollable options for different games -->
     <div class="spel-meny">
          <!-- First Game Option -->
-        <a href="ai_skrivmaskin.html" class="spel-val">
+        <a href="iq_quiz.html" class="spel-val">
             <div>
-                <h3>TextGen AI</h3>
-                <p>Generera unika texter med vår AI!</p>
+                <h3>IQ Quiz</h3>
+                <p>Prova och se vad du har för IQ!</p>
             </div>
         </a>
         
