--- a/iq_quiz.html
+++ b/iq_quiz.html
@@ -8,16 +8,14 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>IQ Quiz</h1>
-    <div id="quiz-container" class="container"></div>
-    <button id="submit-btn">Skicka in</button>
-    <div id="result"></div>
-    <canvas id="resultChart" width="400" height="200"></canvas>
-    
-    <div id="about-us">
-        <p>Denna quiz är skapad för att testa din IQ!</p>
+    <div class="quiz-container">
+        <h1>IQ Quiz</h1>
+        <div id="quiz" class="container"></div>
+        <button id="submit-btn">Skicka in</button>
+        <div id="result" class="result-container"></div>
+        <canvas id="iqChart" width="400" height="200"></canvas>
     </div>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
