--- a/iq_quiz.html
+++ b/iq_quiz.html
@@ -11,14 +11,14 @@
     <div class="quiz-container">
         <h1>IQ Quiz</h1>
         <p>Testa din IQ med vårt roliga och utmanande quiz! Du kommer att få 10 frågor med olika svårighetsgrader.</p>
-        <button id="start-btn">Starta</button>
+        <button id="start-btn">Starta Quiz</button>
     </div>
 
     <div id="quiz-popup" class="popup">
         <div class="popup-content">
             <div id="timer" class="timer"></div>
             <div id="quiz" class="container"></div>
-            <button id="next-btn">Nästa</button>
+            <button id="next-btn">Nästa Fråga</button>
         </div>
     </div>
 
